# projectman

./: Makefile  README.md  pyproject.toml  setup.py
src/projectman/: __main__.py  const.py  create_project.py  create_template.py  main.py  prints.py
templates/: python.yaml
